# PocketCFO

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  JOURNAL.md  PRODUCT_MANIFEST.md  TASKS.md  docker-compose.yml  patch_script.py  patch_script2.py  pyproject.toml  test_llm.py
alembic/: env.py
alembic/versions/: 1071c9c000c4_add_chatmessage.py  26c663ce6cb6_add_user_nudges_table.py  2d8c40050f8a_add_is_goal_and_monthly_income.py  32706aa18eed_add_is_debt_to_envelopes.py  7e6c4931563c_initial.py  80b8ad6d3964_add_due_day_to_envelopes.py  a0d7a2af58c8_add_family_fields_to_user.py  c98fd74b3d23_add_min_payment_to_envelopes.py  e42697d6ee28_add_budget_sync_adjustments_table.py  e6970705b4dc_add_last_paid_month_to_envelopes.py
app/: config.py  main.py
app/bot/handlers/: family.py  onboarding.py  transactions.py
app/database/: models.py  query_helpers.py  session.py
app/services/: ai_brain.py  ai_coach.py  ai_parser.py  nudge_service.py  voice_service.py
assets/branding/: branding_concept.md  start_banner_prompt.txt
scratch/: debug_onboarding.py  debug_onboarding_live.py  full_diff.txt  read_db.py
tests/: test_dashboard.py  test_family.py  test_forecasts.py  test_ledger.py  test_parser.py
