[project]
name = "pocket-cfo"
version = "0.1.0"
description = "Pocket CFO Telegram Bot MVP"
authors = [
    {name = "Antigravity"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.30.1",
    "aiogram>=3.13.0",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.1",
    "litellm>=1.40.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.5",
    "greenlet>=3.0.3"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
